Agentforce/force-app/main/default/objects/Contact/fields/Send_Contact_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Contact_Survey__c</fullName>
    <description>AD-368 - This denotes if we can send an NPS Survey to this contact or not</description>
    <formula>AND( Survey_Contact__c ,OR(ISBLANK(Last_NPS_Survey__c),NPS_Due_Date__c &lt;= TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Contact Survey</label>
    <type>Checkbox</type>
</CustomField>