Agentforce/force-app/main/default/objects/Contact/fields/Sport_Type_Interests__c.field-meta.xml
<CustomField>
    <fullName>Sport_Type_Interests__c</fullName>
    <label>Sport Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Walking &amp; Hiking</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Sailing</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Martial Arts</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Rugby</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Shooting</fullName>
            </value>
            <value>
                <fullName>Motor Sports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>