Agentforce/force-app/main/default/objects/Contact/fields/Survey_Contact__c.field-meta.xml
<CustomField>
    <fullName>Survey_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-368 - Denotes a contact as an NPS contact. These contacts will have the option to send them an NPS Survey</description>
    <label>Survey Contact</label>
    <type>Checkbox</type>
</CustomField>