Agentforce/force-app/main/default/objects/Contact/fields/System_Conga_Email__c.field-meta.xml
<CustomField>
    <fullName>System_Conga_Email__c</fullName>
    <description>Displays &apos;Yes&apos; if the Contact Email field is populated, otherwise displays &apos;No&apos;</description>
    <formula>IF( Has_Email__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>System Conga Email</label>
    <type>Text</type>
</CustomField>