Agentforce/force-app/main/default/objects/Contact/fields/System_Misaligned_Owner_Fields__c.field-meta.xml
<CustomField>
    <fullName>System_Misaligned_Owner_Fields__c</fullName>
    <description>Ticked when an Contact&apos;s Ownership fields are misaligned. Used as trigger for Scheduled Flow.</description>
    <formula>OR(
TEXT(Corporate_Type__c) != TEXT(Owner.Corporate_Type__c),
TEXT(Owner_Region__c) != TEXT(Owner.Region__c),
TEXT(Owner_Business_Unit__c) != TEXT(Owner.Business_Unit__c),
Creator_Country__c != CreatedBy.Country
)</formula>
    <inlineHelpText>System field</inlineHelpText>
    <label>System: Misaligned Owner Fields</label>
    <type>Checkbox</type>
</CustomField>