Agentforce/force-app/main/default/objects/Contact/fields/System_Open_Doors_DNC__c.field-meta.xml
<CustomField>
    <fullName>System_Open_Doors_DNC__c</fullName>
    <formula>IF ( $Permission.External_Telemarketing_User
&amp;&amp; (Account.Customer_Type_f__c = &apos;Existing&apos;
||
ISPICKVAL(Account.Account_Type__c, &apos;Domestic Strategic Account&apos;)
||
ISPICKVAL(Account.Account_Type__c, &apos;Global Strategic Account&apos;)
||
Account.Count_of_Active_Opps__c &gt; 0
||
Account.Competitor__c = TRUE
				||
Account.Supplier__c = TRUE
				||
DoNotCall = TRUE  
				||
HasOptedOutOfEmail = TRUE    
				||
Inactive__c = TRUE     
				||
Account.Partner__c = TRUE
)
,true, false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Doors DNC</label>
    <type>Checkbox</type>
</CustomField>