Agentforce/force-app/main/default/objects/Contact/fields/TH_Consent_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>TH_Consent_Opt_In_Date__c</fullName>
    <description>AD-409 - Captures the Date in which this prospect has opted in to receive communications</description>
    <label>TH Consent Opt In Date</label>
    <type>Date</type>
</CustomField>