Agentforce/force-app/main/default/objects/Contact/fields/Xmas_Card__c.field-meta.xml
<CustomField>
    <fullName>Xmas_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Xmas Card</label>
    <type>Checkbox</type>
</CustomField>