Agentforce/force-app/main/default/objects/Contact/listViews/DL_Cleaning.listView-meta.xml
<ListView>
    <fullName>DL_Cleaning</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Owner_Name__c</columns>
    <columns>Not_At_Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.System_Durham_Lane_Cleaning__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Not_At_Company__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>DL - Cleaning</label>
    <sharedTo>
        <role>UKI_Telemarketing</role>
    </sharedTo>
</ListView>