Agentforce/force-app/main/default/objects/Contact/listViews/Do_Not_Call.listView-meta.xml
<ListView>
    <fullName>Do_Not_Call</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Owner_Name__c</columns>
    <columns>Owner_Region__c</columns>
    <columns>Owner_Business_Unit__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>No_of_Open_Opportunities__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System_Open_Doors_DNC__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Owner_Country__c</field>
        <operation>equals</operation>
        <value>United Kingdom</value>
    </filters>
    <filters>
        <field>Owner_Country__c</field>
        <operation>equals</operation>
        <value>Ireland</value>
    </filters>
    <label>Do Not Call</label>
    <sharedTo>
        <role>UK_I_External_Telemarketing</role>
    </sharedTo>
</ListView>